[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/UIController.gd" type="Script" id=1]
[ext_resource path="res://scripts/PlayerStats.gd" type="Script" id=2]
[ext_resource path="res://res/world-of-water/world of water.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[node name="UiController" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Test" type="Node2D" parent="."]

[node name="PlayerStats" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="DescriptionLabel" type="Label" parent="PlayerStats"]
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 32.0
margin_right = 242.0
margin_bottom = 155.0
custom_fonts/font = SubResource( 1 )
text = "Bees: 
Honey:
Nectar:
Bee-Combs:
Honey-Combs:"

[node name="BeeCountLabel" type="Label" parent="PlayerStats"]
margin_left = 256.0
margin_top = 31.0
margin_right = 267.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="HoneyCountLabel" type="Label" parent="PlayerStats"]
margin_left = 256.0
margin_top = 73.0
margin_right = 279.0
margin_bottom = 112.0
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="NectarCountLabel" type="Label" parent="PlayerStats"]
margin_left = 256.0
margin_top = 115.0
margin_right = 279.0
margin_bottom = 154.0
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="BeeCombCountLabel" type="Label" parent="PlayerStats"]
margin_left = 256.0
margin_top = 157.0
margin_right = 279.0
margin_bottom = 196.0
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="HoneyCombCountLabel" type="Label" parent="PlayerStats"]
margin_left = 256.0
margin_top = 199.0
margin_right = 279.0
margin_bottom = 238.0
custom_fonts/font = SubResource( 2 )
text = "0"

